<resources>
    <string name="app_name">TicTacToe</string>
    <string name="wins">Wins</string>
    <string name="resume_game">Resume Game</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="choose_theme">Choose Theme</string>


    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="enable_sound">Enable Sound</string>
    <string name="theme">Theme</string>
    <string name="sound">Sound</string>
    <string name="change_sound_x">Change X sound</string>
    <string name="change_sound_y">Change Y sound</string>
</resources>